--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
         to see my dynamically bound title!
       </span>
     </div>
-
-
+    <div id="app-3">
+      <span v-if="seen">Now you see me</span>
+    </div>
+    <div id="app-4">
+      <ol>
+        <li v-for="todo in todos">
+          {{ todo.text }}
+        </li>
+      </ol>
+    </div>
+    <div id="app-5">
+      <p>{{ message }}</p>
+      <button v-on:click="reverseMessage">Reverse Message</button>
+    </div>
 
     <script>
       var app = new Vue({
@@ -30,6 +42,36 @@
         el: '#app-2',
         data: {
           message: 'You loaded this page on ' + new Date().toLocaleString()
+        }
+      })
+
+      var app3 = new Vue({
+        el: '#app-3',
+        data: {
+          seen: true
+        }
+      })
+
+      var app4 = new Vue({
+        el: '#app-4',
+        data: {
+          todos: [
+            { text: 'Learn JavaScript' },
+            { text: 'Learn Vue' },
+            { text: 'Build something awesome' }
+          ]
+        }
+      })
+
+      var app5 = new Vue({
+        el: '#app-5',
+        data: {
+          message: 'Hello Vue.js!'
+        },
+        methods: {
+          reverseMessage: function () {
+            this.message = this.message.split('').reverse().join('')
+          }
         }
       })
     </script>
